@@ -9484,6 +9484,136 @@ Ending now
 
 AT_CLEANUP
 
+AT_SETUP([C API Test JUST])
+AT_KEYWORDS([CALL])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  CHRX        PIC  X(10) JUST RIGHT VALUE 'Hello'.
+
+       PROCEDURE DIVISION.
+           DISPLAY "Initial: '" CHRX "'".
+           CALL "CAPI" USING CHRX.
+           DISPLAY "  After: '" CHRX "'".
+           STOP RUN.
+])
+
+AT_DATA([cmod.c], [[
+#include <stdio.h>
+#include <string.h>
+#include <libcob.h>
+
+static char *
+getType(int type, int byvalue)
+{
+   static char wrk[24];
+   switch (type) {
+   case COB_TYPE_GROUP:    return "Group";
+   case COB_TYPE_NUMERIC_COMP5:  return byvalue==2?"COMP-4":"COMP-5";
+   case COB_TYPE_NUMERIC_BINARY: return "COMP-4";
+   case COB_TYPE_NUMERIC_PACKED: return "COMP-3";
+   case COB_TYPE_NUMERIC_FLOAT:  return "COMP-1";
+   case COB_TYPE_NUMERIC_DOUBLE: return "COMP-2";
+   case COB_TYPE_NUMERIC_DISPLAY:   return "DISPLAY";
+   case COB_TYPE_ALPHANUMERIC:   return "X";
+   case COB_TYPE_NUMERIC_EDITED: return "EDITED";
+   }
+   sprintf(wrk,"Type %04X",type);
+   return wrk;
+}
+
+int
+CAPI(void *p1, ...)
+{
+   int      k,nargs,type,digits,scale,size,sign,byvalue,isright;
+   cob_s64_t   val;
+   char     *str, wrk[80],pic[24];
+
+   nargs = cob_get_num_params();
+   if ((k = cob_get_name_line (wrk, NULL)) > 0) {
+      printf("Line%3d: ",k);
+   }
+   printf("CALL with %d parameters\n",nargs);
+   for(k=1; k <= nargs; k++) {
+      type   = cob_get_param_type (k);
+      digits = cob_get_param_digits (k);
+      scale  = cob_get_param_scale (k);
+      size   = cob_get_param_size (k);
+      sign   = cob_get_param_sign (k);
+      byvalue = cob_get_param_constant(k);
+      isright = cob_get_param_right(k);
+      printf("     P%d: %-8s ",k,getType(type,byvalue));
+      if (byvalue == 3)
+         printf("BY CONTENT   ");
+      else if (byvalue == 2)
+         printf("BY VALUE     ");
+      else if (byvalue == 1)
+         printf("LITERAL      ");
+      else
+         printf("BY REFERENCE ");
+      if (type == COB_TYPE_ALPHANUMERIC) {
+         sprintf(pic,"X(%d)",size);
+         str = cob_get_picx_param (k, NULL, 0);
+         printf("%-11s '%.*s'%s",pic,size,str,isright?" RIGHT":"");
+         cob_free ((void*)str);
+         cob_put_picx_param (k, "Bye!");
+      } else if (type == COB_TYPE_GROUP) {
+         sprintf(pic,"(%d)",size);
+         str = cob_get_grp_param (k, NULL, 0);
+         printf("%-11s '%s'",pic,str);
+         cob_free ((void*)str);
+         memset(wrk,' ',sizeof(wrk));
+         memcpy(wrk,"Bye-Bye Birdie!",15);
+         cob_put_grp_param (k, wrk, sizeof(wrk));
+         str = cob_get_grp_param (k, NULL, 0);
+         printf(" --> '%.*s'",size,str);
+         cob_free ((void*)str);
+      } else if (type == COB_TYPE_NUMERIC_EDITED) {
+         if(scale > 0) {
+            sprintf(pic,"%s9(%d)V9(%d)",sign?"S":"",digits-scale,scale);
+         } else {
+            sprintf(pic,"%s9(%d)",sign?"S":"",digits-scale);
+         }
+         val = cob_get_s64_param (k);
+         printf("%-11s %lld ",pic,val);
+         val = val + 130;
+         val = -val;
+         cob_put_s64_param (k, val);
+         cob_get_grp_param (k, wrk, sizeof(wrk));
+         printf(" to %.*s",size,wrk);
+      } else {
+         if(scale > 0) {
+            sprintf(pic,"%s9(%d)V9(%d)",sign?"S":"",digits-scale,scale);
+         } else {
+            sprintf(pic,"%s9(%d)",sign?"S":"",digits-scale);
+         }
+         val = cob_get_s64_param (k);
+         printf("%-11s %lld",pic,val);
+         cob_put_s64_param (k, val + 3);
+      }
+      printf(";\n");
+      fflush(stdout);
+   }
+   if (nargs > 2)
+      cob_put_s64_param (7, val + 3);
+   return 0;
+}
+]])
+
+AT_CHECK([$COMPILE -x -std=mf -debug -Wall -debug prog.cob cmod.c ], [0], [], [])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [Initial: 'Hello     '
+Line 11: CALL with 1 parameters
+     P1: X        BY REFERENCE X(10)       'Hello' RIGHT;
+  After: '      Bye!'
+], [])
+
+AT_CLEANUP
+
 
 AT_SETUP([CALL with program prototypes])
 AT_KEYWORDS([runmisc])
